# alpha-miner

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml
docs/: USAGE.md
hiveos/: alpha-supervise.sh  h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh
kernels/: blake3_an.cl  sha3d.cl
scripts/: build-cuda.sh  build-hip.sh  build-windows.bat  env-wsl-hip.sh  mine-rplant.bat  mine-rplant.sh  remote_cuda_build.py
src/: coin_registry.cpp  core_types.hpp  cpu_miner.cpp  cpu_miner.hpp  cuda_miner.cu  cuda_miner.hpp  devfee.hpp  hip_miner.hip  hip_miner.hpp  job.hpp  main.cpp  opencl_miner.cpp  opencl_miner.hpp  sha3.cpp  sha3.hpp  stratum.cpp  stratum.hpp  stratum_btc.cpp  stratum_btc.hpp  util.cpp  util.hpp
